--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "vuepress-plugin-bubble": "latest",
     "vuepress-plugin-coze": "1.8.0",
     "vuepress-plugin-player": "latest",
-    "vuepress-theme-aurora": "1.13.1"
+    "vuepress-theme-aurora": "^1.13.4"
   }
 }
